--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -6,3 +6,7 @@ Pillow>=10.0.0
 tqdm>=4.66.0
 requests>=2.31.0
 scikit-learn>=1.3.0
+gfpgan>=1.3.8
+torch>=2.0.0
+torchvision>=0.15.0
+basicsr>=1.4.2
